# Subtitle-Converter

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: pages.yml  windows-release.yml
Contents/: Info.plist
Contents/Resources/: AppSettings.plist  script
scripts/: build_mac_arm64.sh  build_mac_intel.sh  build_windows.bat
site/: app.js  index.html  styles.css
src/subtitle_converter/: __init__.py  cli.py  core.py  gui.py
